# windows-named-pipe

./: Cargo.toml  LICENSE  README.md  appveyor.yml
src/: lib.rs
